# bevy-falling-sand-editor

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yaml
assets/particles/: particles.scn.ron
assets/scenes/: benchmark.bfs  bevy_falling_sand.bfs  box.bfs  dividers.bfs  editor_bg.scn.ron  hourglass.bfs  platforms.bfs  prototyping.scn.ron  scene_testing.scn.ron  smaller_box.bfs  tree.bfs  tree.scn.ron  twilight.scn.ron
src/: app_state.rs  brush.rs  camera.rs  cursor.rs  earthquake.rs  exit.rs  framepace.rs  frames.rs  log_capture.rs  main.rs  particles.rs  physics.rs  save.rs  scenes.rs  setup.rs
src/app_state/: config.rs  mod.rs  ui.rs
src/brush/: algs.rs  components.rs  gizmos.rs  mod.rs  setup.rs  signals.rs  states.rs  systems.rs
src/camera/: components.rs  config.rs  mod.rs  resources.rs  save.rs  setup.rs  signals.rs  states.rs  systems.rs
src/canvas/: mod.rs  setup.rs
src/canvas/brush/: components.rs  gizmos.rs  mod.rs  setup.rs  signals.rs  states.rs  systems.rs
src/canvas/select/: gizmos.rs  mod.rs  resources.rs  setup.rs  states.rs  systems.rs
src/chunk_effects/: mod.rs
src/commands/: mod.rs
src/composite_body/: mod.rs
src/config/: mod.rs  resources.rs  save.rs  setup.rs  signals.rs  states.rs
src/config/base/: resources.rs
src/config/resources/: mod.rs  settings.rs  world.rs
src/config/settings/: mod.rs  persistence.rs  resources.rs  save.rs
src/config/world/: mod.rs  persistence.rs  resources.rs  save.rs
src/console_command/: mod.rs
src/debug/: mod.rs  setup.rs
src/directive/: mod.rs
src/game_of_life/: mod.rs  render.rs
src/particles/: default.rs  mod.rs  save.rs  setup.rs
src/particles/algs/: barnsley.rs  mod.rs  sierpinski.rs  text.rs
src/record/: mod.rs
src/setup/: camera.rs  commands.rs  config.rs  console.rs  directive.rs  mod.rs  particles.rs
src/startup/: camera.rs  config.rs  mod.rs  particle_types.rs
src/ui/: file_browser.rs  helpers.rs  mod.rs  overlays.rs  particle_search.rs  quick_actions.rs  settings.rs  setup.rs  states.rs  statistics_panel.rs
src/ui/action_panel/: mod.rs  setup.rs  ui.rs
src/ui/action_panel/particle_editor/: states.rs  ui.rs
src/ui/action_panel/settings/: mod.rs
src/ui/console/: console_meta.rs  log_capture.rs  mod.rs  setup.rs  state.rs  states.rs  ui.rs
src/ui/console/commands/: brush.rs  canvas.rs  conway.rs  earthquake.rs  exit.rs  help.rs  helpers.rs  mod.rs  particles.rs  save.rs  scene.rs  select.rs
src/ui/console/core/: core.rs  mod.rs
src/ui/console/core/commands/: avian.rs  brush.rs  camera.rs  clear.rs  exit.rs  help.rs  mod.rs  particles.rs  physics.rs  ui.rs
src/ui/directives/: help.rs  mod.rs
src/ui/particle_editor/: mod.rs  particle_editor_registry.rs  states.rs  ui.rs
src/ui/popups/: mod.rs  states.rs
src/ui/popups/particle_editor/: components.rs  mod.rs  resources.rs  setup.rs  states.rs  systems.rs  ui.rs
src/ui/popups/settings/: mod.rs  states.rs  ui.rs
src/ui/quick_actions/: mod.rs  setup.rs  systems.rs
src/ui/settings/: states.rs  ui.rs
src/ui/top_bar/: mod.rs  particle_files.rs
src/ui/widgets/: toggle.rs  toggle_switch.rs
